tests/compile_fail/ktstr_test_min_numa_nodes_exceeds_max.stderr
error: min_numa_nodes (4) exceeds max_numa_nodes (2). Set max_numa_nodes explicitly.
 --> tests/compile_fail/ktstr_test_min_numa_nodes_exceeds_max.rs:3:1
  |
3 | #[ktstr_test(min_numa_nodes = 4, max_numa_nodes = 2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
